--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
     "files.autoSave": "onFocusChange",
     "cSpell.words": [
       "profileid",
-      "signin"
+      "signin",
+      "Unfollow"
     ],
     "[javascript]": {
       "editor.defaultFormatter": "esbenp.prettier-vscode"
